@@ -15,7 +15,7 @@
 /classes/models/index.php|b5e38882437216d5e71c70683fac56de
 /classes/models/LengowConnector.php|20c3996f7195826813a0013215927054
 /classes/models/LengowSync.php|2f027328a0322705fb8d0da31d7bfef3
-/classes/models/LengowMarketplace.php|7f0d5d562e51ed85075260511da3853e
+/classes/models/LengowMarketplace.php|01a23a48205a22b9fbf13a992a8b55d6
 /classes/models/LengowFile.php|efd92e780beae7118f3bea44bd8fae1b
 /classes/models/LengowCart.php|fa761b887a5650d093236df8619a904c
 /classes/models/LengowProduct.php|911dabe15b3b8f8ee1eef8eb7fbbd605
