@@ -7,6 +7,7 @@ Version 3.4.2
     - Feature: Adding the PHP version in the toolbox
     - Feature: Modification of the fallback urls of the Lengow Help Center
     - Feature: Adding extra field update date in external toolbox
+    - Feature: Regular update of marketplace data in carrier matching
     - Bugfix: Add compatibility with 1.7.8.1
     - BugFix: [Import] Loading of order types at each order synchronization
 
